--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body id="body">
     <div class="container">
         <h1>Bored and need an activity? Pet the cat for inspiration...</h1>
-        <div class="activity" id="activity">activity to be shown here</div>
+        <div class="activity" id="activity"></div>
     <img src="https://i.ibb.co/HxTx9tR/catty-removebg-preview.png" alt="">
 
     <script src="./script.js"></script>
